--- a/Selection effect/index.html
+++ b/Selection effect/index.html
@@ -11,12 +11,12 @@
         <div class="list">
             <div class="item"><img src="img/Mera House.webp" alt=""></div>
             <div class="item"><img src="img/Mera House.webp" alt=""></div>
-            <div class="item"><img src="img/Mera House.webp" alt=""></div>
-            <div class="item"><img src="img/Mera House.webp" alt=""></div>
-            <div class="item"><img src="img/Mera House.webp" alt=""></div>
-            <div class="item"><img src="img/Mera House.webp" alt=""></div>
-            <div class="item"><img src="img/Mera House.webp" alt=""></div>
-            <div class="item"><img src="img/Mera House.webp" alt=""></div>
+            <div class="item"><img src="img/postman.webp" alt=""></div>
+            <div class="item"><img src="img/express.webp" alt=""></div>
+            <div class="item"><img src="img/node.avif" alt=""></div>
+            <div class="item"><img src="img/reactjs.png" alt=""></div>
+            <div class="item"><img src="img/mongodb.jpeg" alt=""></div>
+            <div class="item"><img src="img/github.png" alt=""></div>
             <div class="item"><img src="img/Mera House.webp" alt=""></div>
             <div class="item"><img src="img/Mera House.webp" alt=""></div>
             
